# pocket-news

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-05-11-pocket-news.md
docs/superpowers/specs/: 2026-05-11-pocket-news-design.md
examples/: basic_usage.py  multi_interest.py  translation.py
src/pocket_news/: __init__.py  _secrets.example.py  agent.py  cache.py  cli.py  config.py  dedupe.py  exceptions.py  images.py  languages.py  models.py  prompts.py  synthesizer.py
src/pocket_news/fetchers/: __init__.py  base.py  mediastack.py  the_news.py  world_news.py
tests/: conftest.py  test_agent.py  test_base_fetcher.py  test_cache.py  test_config.py  test_dedupe.py  test_exceptions.py  test_fetcher_mediastack.py  test_fetcher_the_news.py  test_fetcher_world_news.py  test_images.py  test_languages.py  test_models.py  test_parser.py  test_prompts.py  test_synthesizer_unit.py
tests/fixtures/: mediastack_response.json  the_news_response.json  world_news_response.json
